--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Navbar Section -->
   <nav class="navbar">
-    <div class="navbar-logo">MyBrand</div>
+    <div class="navbar-logo">Astute Global School</div>
     <ul class="navbar-links">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -72,7 +72,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="footer-content">
-      <p>© 2023 MyBrand. All rights reserved.</p>
+      <p>© 2024 Astute Global School. All rights reserved.</p>
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
